# sample-rag

./: .gitignore  README.md  app.py  input.csv  load_to_duckdb.py  profiles.yml  pyproject.toml
rag_elt_dbt/: dbt_project.yml
rag_elt_dbt/models/: raw_documents.sql  transform_with_embeddings.py
