[project]
name = "sample-rag"
version = "0.1.0"
description = "Local RAG demo: PyLate (ColBERT Late Interaction) + HF Transformers + Gradio"
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies (managed by uv via `uv sync`)
dependencies = [
  "transformers",
  "torch",         # uv will resolve platform-appropriate wheel
  "gradio",
  "pandas",
  "numpy",
  "pylate",
]

[tool.uv]
# Create and manage a local .venv and lock dependencies with `uv sync`
# You can pin Python version by `uv python install 3.12` before `uv sync`.
